[package]
authors = ["The Rust Project Developers"]
name = "rustdoc"
version = "0.0.0"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
pulldown-cmark = { version = "0.8", default-features = false }
minifier = "0.0.33"
rayon = { version = "0.3.0", package = "rustc-rayon" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.0"
tempfile = "3"
itertools = "0.9"
regex = "1"
tracing = { version = "0.1", optional = true }
tracing-tree = { version = "0.1.6", optional = true }

[dependencies.tracing-subscriber]
version = "0.2.13"
default-features = false
features = ["fmt", "env-filter", "smallvec", "parking_lot", "ansi"]
optional = true

[features]
using-ci-artifacts = ["tracing", "tracing-tree", "tracing-subscriber"]

[dev-dependencies]
expect-test = "1.0"
